deploy/k8s/overlays/aws/storageclass-aws.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: gp3
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: gp3
